After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752236 - JNI: jaw_value_get_range is missing.
JNI: jaw_value_get_range is missing.
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other All
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-10 17:15 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-10 21:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Create jaw_value_get_range (5.92 KB, patch)
2015-07-10 19:33 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-10 17:15:59 UTC
This method should essentially replace get_minimum_value and get_maximum_value which are deprecated and their use is no longer recommended.

https://git.gnome.org/browse/atk/tree/atk/atkvalue.h#n71
Comment 1 Magdalen Berns (irc magpie) 2015-07-10 19:33:26 UTC
Created attachment 307265 [details] [review]
Create jaw_value_get_range

This patch was quite tricky and I have put both the wrapper and jni work into this patch because the wrapper changes for this would break the build without the jni ones, so they need to go in together.