JNI: create jaw_value_get_range

get_minimum_value and get_maximum_value are deprecated and
use of their implementors is not recommended, however the
AccessibleValue class does use like methods rather than a
getter for Range. This can be overcome by using getters for
the min and max value in java and using get_range in C

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=752236